# pkmn-red-save-generator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-PENDING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
Dummy Save/: Pokemon - Red Version (USA, Europe) (SGB Enhanced).red.json  Pokemon - Red Version (USA, Europe) (SGB Enhanced).sav  PokemonBoxes.json  PokemonSummary.json  SaveGenieSummary.txt
Pkmn Red Save Generator/: main.cpp
Pkmn Red Save Generator.xcodeproj/: project.pbxproj
docs/: ARCHITECTURE.md  CANONICALIZATION_POLICY.md  CLI_REFERENCE.md  DECISION_LOG.md  DUMMY_SAVE_AUDIT.md  DUMMY_TEMPLATE_INHERITANCE_MAP.md  FINAL_MANUAL_VALIDATION_FAILURE_ANALYSIS.md  FINAL_RELEASE_VALIDATION_MATRIX.md  FINAL_SEMANTIC_SUFFICIENCY_PROOF.md  INPUT_FIELD_CONTRACT.md  KNOWN_LIMITATIONS.md  MILESTONES_1_2_3_EXECUTION_PLAN.md  MILESTONE_2_MINIMAL_STATE_CONTRACT.md  MILESTONE_5_6_LOAD_CORRUPTION_INCIDENT.md  MILESTONE_5_STORAGE_CONTRACT.md  MILESTONE_6_EXTENDED_STATE_CONTRACT.md  PREREQUISITE_SOURCE_CONCORDANCE.md  PROJECT_ROADMAP.md  PROJECT_SCOPE.md  RELEASE_CHECKLIST.md  RESEARCH_FINDINGS_LOG.md  SEMANTIC_EQUIVALENCE_CONTRACT.md  SUPPORTED_TARGET_PROFILE.md  VALIDATION_PLAN.md
profiles/: pokemon-red-usa-europe-v1.json
samples/: README.md  minimal.red.json  representative.red.json  unsupported-viridian-pokemon-center.red.json
src/: Version.hpp
src/cli/: Application.hpp
src/comparison/: ComparisonTypes.hpp  PartyComparisonRules.hpp  PhysicalComparator.hpp  SemanticComparator.hpp  (+1 more)
tests/: milestone1_tests.cpp
(+32 files in other folders)
